--- a/src/main/resources/templates/listBooks.html
+++ b/src/main/resources/templates/listBooks.html
@@ -24,6 +24,9 @@
         .book-option:hover {
             background-color: #f5f5f5;
         }
+        .inline-form {
+            display: inline-block;
+        }
     </style>
 </head>
 <body>
@@ -31,7 +34,11 @@
     <h1>Welcome to our Book Reservation App</h1>
 </header>
 <main>
-    <form action="/" method="POST">
+    <h2>Recently viewed:</h2>
+    <ul>
+        <li th:each="lastViewedBook : ${lastViewedBooks}" th:text="${lastViewedBook}"></li>
+    </ul>
+    <form action="/books" method="GET">
         <h2>Filter books:</h2>
 
         <label>Name:</label>
@@ -46,15 +53,25 @@
     </form>
     <form action="/bookReservation" method="POST">
         <h2>Choose a book:</h2>
-        <!-- Display radio buttons for each book,
-             the value should be the book title
-             and the displayed text should be:
-             Title: <book_title>, Genre: <book_genre>, Rating: <average_rating> -->
-        <div th:each="book:${books}" class="book-option">
-            <input type="radio" name="book" th:value="${book.title}" required>
-            <span th:text="'Title: ' + ${book.title} + ', Genre: ' + ${book.genre} + ', Rating: ' + ${book.averageRating}"></span>
 
+        <div th:each="book : ${books}">
+            <div class="book-entry">
+                <input type="radio" class="book-option" name="bookTitle" th:value="${book.getTitle()}"
+                       th:text="'Title: ' + ${book.getTitle()} + ', Genre: ' + ${book.getGenre()} + ', Rating: ' + ${book.getAverageRating()} + ', Author: ' + ${book.getAuthor().getName()} + ' ' + ${book.getAuthor().getSurname()}" />
+
+                <button type="submit" name="edit" th:formaction="@{'/books/book-form/' + ${book.getId()}}" formmethod="get" formnovalidate>
+                    Edit
+                </button>
+
+                <button type="submit" name="delete" th:formaction="@{'/books/delete/' + ${book.getId()}}" formmethod="post" formnovalidate>
+                    Delete
+                </button>
+            </div>
         </div>
+
+        <button type="submit" name="addBook" formaction="/books/book-form" formmethod="get" formnovalidate>
+            Add Book
+        </button>
 
         <h2>Enter your information:</h2>
         <label>Your Name:</label>
