--- a/src/main/resources/templates/reservationConfirmation.html
+++ b/src/main/resources/templates/reservationConfirmation.html
@@ -44,20 +44,19 @@
     </tr>
     <tr>
       <td><b>Reader Name</b></td>
-      <td>${readerName}</td>
+      <td th:text="${readerName}"><!-- Display reader name from servlet --></td>
     </tr>
     <tr>
       <td><b>Client IP Address</b></td>
-      <td>${ipAddress}</td>
-
+      <td th:text="${ipAddress}"><!-- Display IP address from servlet --></td>
     </tr>
     <tr>
       <td><b>Reservation for Book</b></td>
-      <td>${bookTitle}</td>
+      <td th:text="${bookTitle}"><!-- Display book title from servlet --></td>
     </tr>
     <tr>
       <td><b>Number of copies</b></td>
-      <td>${numberOfCopies}</td>
+      <td th:text="${numberOfCopies}"><!-- Display number of copies from servlet --></td>
     </tr>
   </table>
 </section>
